<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="app_name">Praktikumsverwaltung_AndroidApp</string>

    <!-- Strings related to login -->
    <string name="user">Email or Username</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="form">Form of Intern</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="add_entry">Add Entry</string>
    <string name="save">Save</string>
    <string name="saveChanges">Save Changes</string>
    <string name="description">Description</string>
    <string name="salary">Salary(optional)</string>
    <string name="salary2">Salary</string>
    <string name="currentform">Current Form</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Registration</string>
    <string name="entry">Entry</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="show">Show</string>
    <string name="profile">Profile</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
