<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.obercoder.praktikumsverwaltung_androidapp.pkgGUI.EditEntryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imgViewProfile"
            android:layout_width="match_parent"
            android:layout_height="268dp"
            app:srcCompat="@drawable/ic_menu_camera" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.31" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/firstname" />

            <EditText
                android:id="@+id/txtFirstName"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.41" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.31" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/lastname" />

            <EditText
                android:id="@+id/txtLastName"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.41" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.31" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.41" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.31" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/currentform" />

            <EditText
                android:id="@+id/txtCurrentForm"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.41" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.31" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.41" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnSaveChanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/saveChanges" />

    </LinearLayout>

</RelativeLayout>
